Added the supervised learning folder

--- a/supervised-learning/decision-tree/decision-tree.ipynb
+++ b/supervised-learning/decision-tree/decision-tree.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load the dataset present in the folder"
+    "# Load the diabetes dataset "
    ]
   },
   {
